Adjust compiler target